# simple_od

./: CMakeLists.txt  README.md
python/: video_get.ipynb
src/: .main_od_color.cpp.swo  CMakeLists.txt  detector.cpp  detector.h  detector.h_back  detector_color.cpp  detector_color.h  global.cpp  global.h  glove_control.cpp  glove_control.h  main_glove_track.cpp  main_od.cpp  main_od_color.cpp  main_video.cpp  match_example.cpp  test_detector.cpp  test_fast.cpp  test_hsv_value.cpp  test_rs200.cpp  test_tracker.cpp  tracker.cpp  tracker.h  video-write.cpp
src/control/: CMakeLists.txt  control.cpp  control.h  motor.cpp  motor.h  test_control.cpp
